--- a/reactportfolio/src/App.css
+++ b/reactportfolio/src/App.css
@@ -3,7 +3,7 @@ body {
   background-image: url("./assets/graphics/background.png");
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   color: white;
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -83,6 +83,18 @@ p {
   font-size: 1.5rem;
 }
 
+/* About Page Image Styling */
+.about-image {
+  margin-top: 20px;
+  width: 100%;
+  max-width: 600px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* About and Resume Container Styling */
 .about-container,
 .resume-container {
@@ -132,7 +144,7 @@ p {
 }
 
 .skills-container {
-  margin-bottom: 40px; /* Adds space between skills and projects */
+  margin-bottom: 40px;
 }
 
 .skills-card,
@@ -185,8 +197,8 @@ p {
 /* Projects Container and Card Styling */
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* Ensure 3 columns */
-  gap: 20px; /* Adjust spacing between the cards */
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
   padding: 20px;
 }
 
@@ -230,12 +242,12 @@ p {
 }
 
 .project-icon svg {
-  font-size: 2rem; /* Adjust the icon size */
-  color: #81d8d0; /* Icon color */
+  font-size: 2rem;
+  color: #81d8d0;
 }
 
 .project-icon:hover svg {
-  color: #007a74; /* Icon color on hover */
+  color: #007a74;
 }
 
 /* Project Links Styling */
@@ -260,57 +272,19 @@ p {
 }
 
 .project-links a:hover {
-  color: #007a74; /* Change link color on hover */
+  color: #007a74;
 }
 
-/* Resume Container Styling */
-.resume-container {
-  padding: 40px 20px;
-}
-
-.resume-card {
-  background-color: rgba(170, 148, 127, 0.9);
-  color: white;
-  font-weight: bold;
-  padding: 30px;
-  border-radius: 10px;
-  transition: transform 0.3s ease;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.resume-card h2 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-}
-
-.resume-card h3 {
-  font-size: 2rem;
-  margin-top: 40px;
-}
-
-.resume-card h4 {
-  font-size: 1.8rem;
-  margin-top: 20px;
-}
-
-.resume-card ul {
-  list-style-type: disc;
-  margin-left: 20px;
-}
-
-.resume-card ul li {
-  margin-bottom: 10px;
-}
-
-.resume-card a {
-  color: #81d8d0;
-  text-decoration: none;
-}
-
-.resume-card a:hover {
-  text-decoration: underline;
+/* About Page Image Styling */
+.about-image {
+  margin-top: 20px; /* Add some space between the text and image */
+  width: 100%; /* Make the image responsive */
+  max-width: 300px; /* Limit the maximum width of the image */
+  border-radius: 10px; /* Add rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Download Resume Button Styling */
