--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: repeat;
+  background-attachment: fixed;
   color: white;
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -98,7 +99,7 @@ p {
 /* About and Resume Container Styling */
 .about-container,
 .resume-container {
-  padding: 40px 20px;
+  padding: 40px 70px;
 }
 
 .about-card,
